# web-real-time-chat

./: docker-compose-dev.yml
fastapi-backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  start-dev.sh
fastapi-backend/alembic/: env.py
fastapi-backend/alembic/versions/: 07a7071889c8_initial_commit.py
fastapi-backend/app/: config.py  metadata.py
fastapi-backend/app/database/: __init__.py  models.py  operations.py
fastapi-backend/app/routers/: auth.py  chats.py  users.py
fastapi-backend/app/schemas/: chat.py  token.py  user.py
fastapi-backend/app/utils/: auth.py  connection_manager.py
react-frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
react-frontend/src/: App.js
react-frontend/src/Pages/Auth/: Auth.css  Auth.js
react-frontend/src/Pages/AuthRedirect/: AuthRedirect.js
react-frontend/src/Pages/Chat/: Chat.css  Chat.js
react-frontend/src/Pages/Chats/: Chats.css  Chats.js
react-frontend/src/Utils/: BackendUrl.js
